fix removed white space from right side

--- a/asset/style/myStyle.css
+++ b/asset/style/myStyle.css
@@ -47,8 +47,8 @@ body{
     padding-left: 3rem;
     font-family: raleway;
     font-size: 2rem;
-    width: 40%;
-    min-width: 25rem;
+    /* width: 40%;
+    min-width: 25rem; */
     letter-spacing: 0.3rem;
     cursor: pointer;
 }
@@ -120,10 +120,10 @@ body{
 
 .aboutme-img{
     order: 1;
-    padding: 1rem 1rem 0.5rem 2rem;
+    padding: 1rem 1rem 0.5rem 1rem;
     margin: auto;
     align-items: center;
-    width: 100%;
+    width: 90%;
     max-width: 25rem;
     height:60%;
 }
